# vcon-trajectories

./: .gitignore  README.md  pyproject.toml
data/qwythos_evals/: retest_outputs.md  sample_generations.md  tool_test_outputs.md
docs/: conventions.md  data-source.md  mapping.md  trajectory-feature-space.md  trajectory-sources.md  vcon-spec-notes.md
examples/: generate_sample.py  mythos_agent_sample.vcon.json  mythos_agent_sample_record.json
examples/conventions/: external-and-binary-content.vcon.json  incomplete-run.vcon.json  multi-agent-transfer.vcon.json
examples/sources/: ATTRIBUTION.md  agent-traces.vcon.json  api-bank.vcon.json  hermes-function-calling.vcon.json  mind2web.vcon.json  openinference.vcon.json  swe-rebench.vcon.json  tau-bench.vcon.json
experiments/vac-agent-session/: README.md  SPEC.md  build_examples.py  test_vac.py  vac.py
experiments/vac-agent-session/examples/: agent-session-claude-code.vac.json  agent-session-claude-code.vcon.json  agent-session-taubench.vac.json  agent-session-taubench.vcon.json
schema/: draft-ietf-vcon-vcon-core-03.txt  vcon.cddl
scripts/: build_convention_examples.py  build_source_examples.py  cddl_validate.py
src/vcon_trajectories/: __init__.py  __main__.py  convert.py  models.py  mythos.py  parse.py  validate.py
src/vcon_trajectories/sources/: __init__.py  adapters.py  ir.py
tests/: test_pipeline.py  test_sources.py
