[project]
name = "vcon-trajectories"
version = "0.1.0"
description = "Represent 'mythos' agent trajectories from Hugging Face as IETF vCons (draft-ietf-vcon-vcon-core, v0.4.0) and validate them against the vCon JSON Schema."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "jsonschema>=4.20",
    "rfc3339-validator>=0.1.4",
    "huggingface_hub>=0.30",
]

[project.optional-dependencies]
# python-vcon is the IETF reference implementation. It only speaks vCon 0.0.2
# and pulls heavy audio deps, so it is optional and used only as a secondary
# cross-check. Requires Python <3.13 to build.
reference = ["python_vcon"]

[project.scripts]
vcon-trajectories = "vcon_trajectories.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vcon_trajectories"]
